fix: make gap smaller for smaller devices

--- a/style/style.css
+++ b/style/style.css
@@ -467,6 +467,7 @@ footer {
     }
     .social-icons {
         flex-wrap: wrap;
+        gap: 3rem;
     }
     section h2, header.welcome-section{
         text-align: center;
